test/valid/fc66494_scalar_mult_2d/scalar_mult_2d.mag
-- Author: 66494, Tiago Silva

const num : Int = -3
const vect : {x: Int, y: Int} = {x = -1, y = 5}

fun scalar_mult_2d (n, v) : (Int, {x: Int, y: Int}) -> {vx: Int, vy: Int} =
    {vx = n*v.x, vy = n*v.y}

fun main (_) : Unit -> Unit =
    print(scalar_mult_2d(num, vect).vy)