test/invalid-semantics/fc66494_wrong_projection/wrong_projection.mag
-- Author: 66494, Tiago Silva

const x : Int = 1
const rec : {y:Int, z:Int} = {y=2,z=3}

fun main (_) : Unit -> Unit =
    print(rec.x)